[project]
name = "ros-mcp"
version = "0.1.0"
description = "MCP tool server for ROS using rosbridge WebSocket"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [
    { name = "Glory Olusola"}
]

dependencies = [
    "fastmcp>=2.11.3",
    "google-generativeai>=0.8.5",
    "mcp[cli]>=1.13.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",   
    "pytest"   
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  
ignore = ["E501"]         

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
